package com.conceptarena.core.shared.command;

public interface Command<T> {
}
