package com.conceptarena.room.domain;

public enum RoomStatus {
    WAITING, IN_GAME, FINISHED
}
