package com.conceptarena.room.domain;

public enum RoomType {
    PUBLIC, PRIVATE
}
